Added welcome screen, and made DistroDetector which temporaly outputs ID_LIKE to view.

--- a/WinAppsInstaller/Views/MainWindow.axaml
+++ b/WinAppsInstaller/Views/MainWindow.axaml
@@ -15,6 +15,6 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <ContentControl Content="{Binding CurrentViewModel}" />
 
 </Window>
