--- a/WinAppsInstaller/Views/WelcomeView.axaml
+++ b/WinAppsInstaller/Views/WelcomeView.axaml
@@ -2,7 +2,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModels="clr-namespace:WinAppsInstaller.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="WinAppsInstaller.Views.WelcomeView">
-    Welcome to Avalonia!
+             x:Class="WinAppsInstaller.Views.WelcomeView"
+             x:DataType="viewModels:WelcomeViewModel">
+        <StackPanel Margin="30" Spacing="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="Welcome to WinApps Installer" FontSize="24" FontWeight="Bold"/>
+            <TextBlock Text="This app helps install Windows apps on Linux using WinApps." TextAlignment="Center" />
+            <Button Content="Start Installation" Command="{Binding StartInstallCommand}" Width="200" />
+        </StackPanel>
 </UserControl>
