--- a/WinAppsInstaller/Views/DistroSelectionView.axaml
+++ b/WinAppsInstaller/Views/DistroSelectionView.axaml
@@ -6,11 +6,22 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="WinAppsInstaller.Views.DistroSelectionView"
              x:DataType="vm:DistroSelectionViewModel">
-    
-    <StackPanel Margin="20" Spacing="10">
-        <TextBlock Text="ID_LIKE detection" FontWeight="Bold" FontSize="18"/>
-        <TextBlock Text="ID_LIKE from /etc/os-release:"/>
-        <TextBlock Text="{Binding IdLike}" FontStyle="Italic" />
+
+    <StackPanel Margin="30" Spacing="15" HorizontalAlignment="Center" VerticalAlignment="Center">
+
+        <TextBlock Text="Distro Detection" FontSize="22" FontWeight="Bold" />
+
+        <TextBlock Text="ID_LIKE from /etc/os-release:" FontWeight="SemiBold" />
+        <TextBlock Text="{Binding IdLike}" FontStyle="Italic" Foreground="Gray" />
+
+        <TextBlock Text="{Binding StatusMessage}" TextWrapping="Wrap"
+                   Foreground="{Binding IsSupported}" />
+
+        <Button Content="Continue"
+                Command="{Binding ContinueCommand}"
+                IsVisible="{Binding IsSupported}"
+                Width="150"
+                HorizontalAlignment="Center" />
+
     </StackPanel>
-    
 </UserControl>
