--- a/WinAppsInstaller/App.axaml
+++ b/WinAppsInstaller/App.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="WinAppsInstaller.App"
              xmlns:local="using:WinAppsInstaller"
+             xmlns:converters="clr-namespace:WinAppsInstaller.Converters"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
@@ -12,4 +13,8 @@
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
+             
+    <Application.Resources>
+        <converters:InverseBoolConverter x:Key="InverseBoolConverter" />
+    </Application.Resources>
 </Application>
