--- a/WinAppsInstaller/Views/PkexecCheckView.axaml
+++ b/WinAppsInstaller/Views/PkexecCheckView.axaml
@@ -6,14 +6,17 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="WinAppsInstaller.Views.PkexecCheckView"
              x:DataType="vm:PkexecCheckViewModel">
+    
     <StackPanel Margin="30" Spacing="15" HorizontalAlignment="Center" VerticalAlignment="Center">
-
         <TextBlock Text="pkexec Check" FontSize="22" FontWeight="Bold" />
-
-        <TextBlock Text="{Binding StatusMessage}" TextWrapping="Wrap" />
+        <TextBlock Text="{Binding StatusMessage}" TextWrapping="Wrap" FontSize="14" />
 
         <Button Content="Install pkexec"
                 Command="{Binding InstallPkexecCommand}"
                 IsVisible="{Binding ShowInstallButton}" />
+
+        <Button Content="Continue"
+                Command="{Binding ContinueAfterInstallCommand}"
+                IsVisible="{Binding ShowContinueButton}" />
     </StackPanel>
 </UserControl>
